--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+#game-wrapper {
+  display: flex
+}
+
+.sea {
+  width: 1rem;
+  height: 1rem;
+  background-color: lightblue;
+  border: 0.0625rem solid mediumblue
 }
